--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,100 +1,122 @@
+/* IMP!!! LOGIN AND SIGNUP styles are both on this stylesheet scroll to lower half for SIGNUP */
+
 .login-grid {
-	display: grid;
-	grid-template-columns: 40% 60%;
-	height: 100vh;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  height: 100vh;
 }
 
 .login-image {
-	/* background-image: url('https://images.pexels.com/photos/1055408/pexels-photo-1055408.jpeg'); */
-	/* background-image: url('https://images.pexels.com/photos/3737691/pexels-photo-3737691.jpeg'); */
-	/* background-image: url('https://images.pexels.com/photos/788485/pexels-photo-788485.jpeg'); */
-	background-image: url('https://images.pexels.com/photos/1934796/pexels-photo-1934796.jpeg');
+  /* background-image: url('https://images.pexels.com/photos/1055408/pexels-photo-1055408.jpeg'); */
+  /* background-image: url('https://images.pexels.com/photos/3737691/pexels-photo-3737691.jpeg'); */
+  /* background-image: url('https://images.pexels.com/photos/788485/pexels-photo-788485.jpeg'); */
+  background-image: url("https://images.pexels.com/photos/1934796/pexels-photo-1934796.jpeg");
 
-	background-size: cover;
-	background-position: center;
+  background-size: cover;
+  background-position: center;
 }
+
 /* text on login-image */
 div.login-image > h2 {
-	font-size: 50px;
-	padding: 30px 40px 0 40px;
-	margin: 25vh 0 6vh 0;
-	/* ^ down x% of the img view height 0 0 0*/
-	text-align: center;
+  font-size: 50px;
+  padding: 30px 40px 0 40px;
+  margin: 25vh 0 6vh 0;
+  /* ^ down x% of the img view height 0 0 0*/
+  text-align: center;
 }
 
 div.login-image .link-button {
-	margin: 0 0 0 15vw;
-	/* margin: 0 0 0 20vw; */
-	text-align: center;
-	border: 1px solid;
-	font-family: 'Jost';
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	font-size: 18px;
-	color: black;
-	background-color: #fff;
-	opacity: 0.5;
-	padding: 20px 90px 20px 90px;
-	border-radius: 8px;
-	/* padding: 10px; */
+  margin: 0 0 0 15vw;
+  /* margin: 0 0 0 20vw; */
+  text-align: center;
+  border: 1px solid;
+  font-family: "Jost";
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 18px;
+  color: black;
+  background-color: #fff;
+  opacity: 0.5;
+  /* SIGNUP BUTTON */
+  padding: 2vh 2vw 2vh 2vw;
+  border-radius: 8px;
 }
 
 div.login-image .link-button:hover {
-	text-decoration: none;
-	background-color: #343a40;
-	border: #343a40;
+  text-decoration: none;
+  background-color: #fff;
+  padding: 2.5vh 2.5vw 2.5vh 2.5vw;
+  border: #343a40;
 }
 
 .form-container {
-	justify-content: center;
-	/* margin: 30px 0 0 130px; */
-	margin: 6vw;
-	padding-top: 100px;
+  justify-content: center;
+  /* margin: 30px 0 0 130px; */
+  margin: 6vw;
+  padding-top: 100px;
 }
 form > h1,
 h3 {
-	/* text-align: center; */
+  /* text-align: center; */
 }
 /* box around input and icons */
 .input-container {
-	/* display: inline-flex; */
-	flex: 1 1 300px;
-	position: relative;
-	border: 1px solid;
-	border-radius: 5px;
-	overflow: hidden;
-	margin: 25px 0 35px 5px;
-	width: 45vw;
-	box-sizing: border-box;
-	padding: 10px;
+  /* display: inline-flex; */
+  flex: 1 1 300px;
+  position: relative;
+  border: 1px solid;
+  border-radius: 5px;
+  overflow: hidden;
+  margin: 25px 0 35px 5px;
+  width: 45vw;
+  box-sizing: border-box;
+  padding: 10px;
 }
 /* box around input alone */
 .input-box {
-	padding: 0.5rem 0.5rem 0.5rem 0;
-	flex: 1;
-	font-family: 'Jost';
-	font-size: 22px;
-	letter-spacing: 3px;
-	color: black;
-	border: none;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+  flex: 1;
+  font-family: "Jost";
+  font-size: 22px;
+  letter-spacing: 3px;
+  color: black;
+  border: none;
 }
 .input-icon {
-	padding: 1.3rem 0.5em 1.3rem 1.3rem;
-	background-color: white;
-	color: #8a8a8a;
-	background-position: center;
-	font-size: 1em;
+  padding: 1.3rem 0.5em 1.3rem 1.3rem;
+  background-color: white;
+  color: #8a8a8a;
+  background-position: center;
+  font-size: 1em;
 }
 .button-login {
-	margin-top: 25px;
-	margin-left: 15vw;
-	width: 15vw;
-	height: 8vh;
-	align-items: center;
-	justify-content: center;
-	letter-spacing: 3px;
-	text-transform: uppercase;
+  margin-top: 25px;
+  margin-left: 15vw;
+  width: 15vw;
+  height: 8vh;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
 }
+
+/* //////SIGNUP CUSTOM STYLES START HERE */
+.signup-image {
+  background-image: url("https://images.pexels.com/photos/1934796/pexels-photo-1934796.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
+.signup-grid {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  height: 100vh;
+}
+
+.signup-container {
+  padding: 12vh 0 0 6vw;
+}
+
 /* .loginform {
 	height: auto;
 	width: 400px;
