--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -15,6 +15,18 @@ button:hover,
   opacity: 0.8;
 }
 
+/* Create an account button link on modal sizing and spacing */
+.btn-link {
+  width: 150px;
+  margin: 0 -1vw;
+}
+
+.btn:hover {
+  color: #000;
+  background-color: #fff !important;
+  text-decoration: none;
+  border-color: #fff;
+}
 /* .link:hover {
 	border-radius: 4px;
 	border: 1px solid #404040;
