--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -32,7 +32,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  top: 0;
+  /* top: 0; */
 }
 
 @media only screen and (max-width: 600px) {
