--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -55,7 +55,7 @@ h2,
   font-size: 35px;
   line-height: 200%;
   letter-spacing: 5px;
-  margin: 0 5vw 10vh 0;
+  margin: 0 20vw;
 }
 
 /* center box around 2nd row content */
@@ -63,6 +63,7 @@ h2,
   height: 80vh;
   width: 90vw;
   box-sizing: border-box;
+  background-color: #4b553a;
   border-radius: 5px;
   margin: 100px;
   padding: 20px;
@@ -75,8 +76,6 @@ h2,
   grid-template-columns: auto auto auto auto auto;
   grid-column-gap: 5px;
   grid-row-gap: 5px;
-  align-items: center;
-  justify-content: center;
 }
 
 /* search bar landing page */
