--- a/src/styles/spots.css
+++ b/src/styles/spots.css
@@ -1,4 +1,4 @@
-.fixed {
+/* .fixed {
 	height: calc(100vh - 71px);
 	overflow-y: scroll;
 }
@@ -6,4 +6,4 @@
 .sidebar-left {
 	grid-template-columns: 200px auto;
 	grid-column-gap: 0px;
-}
+} */
