--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
 	border-radius: 2px;
 	background-color: rgba(255, 255, 255);
 }
@@ -155,4 +155,4 @@ a.card {
 	font-size: 14px;
 	padding: 5px 8px;
 	border-radius: 4px;
-}
+} */
