--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -1,143 +1,147 @@
+.grid {
+  display: grid;
+}
+
 .grid.form {
-	width: 600px;
-	height: 700px;
-	padding: 30px;
-	border-radius: 3px;
+  width: 600px;
+  height: 700px;
+  padding: 30px;
+  border-radius: 3px;
 }
 .grid .autoheight {
-	height: 720px;
+  height: 720px;
 }
 
 .grid.titlespot {
-	margin: 30px;
+  margin: 30px;
 }
 
 .transparent {
-	background-color: rgba(255, 255, 255, 0.85);
-	margin-top: 30px;
+  background-color: rgba(255, 255, 255, 0.85);
+  margin-top: 30px;
 }
 
 .whitebackground {
-	background-color: white;
-	margin-top: 30px;
+  background-color: white;
+  margin-top: 30px;
 }
 
 .grid.center {
-	justify-content: center;
+  justify-content: center;
 }
 
 .grid.sidebar-left {
-	grid-template-columns: 200px auto;
-	grid-column-gap: 0px;
+  grid-template-columns: 200px auto;
+  grid-column-gap: 0px;
 }
 
 .gridheading {
-	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-column-gap: 10px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-column-gap: 10px;
 }
 
 .grid.twospots {
-	grid-template-columns: 3fr 2fr;
+  grid-template-columns: 3fr 2fr;
 }
 
 .grid.scroll {
-	overflow-y: auto;
-	height: calc(100vh - 142px); /* subtract nav & filter */
+  overflow-y: auto;
+  height: calc(100vh - 142px); /* subtract nav & filter */
 }
 
 .grid.twocards {
-	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 30px;
-	grid-row-gap: 30px;
-	padding: 30px;
-	overflow-y: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  padding: 30px;
+  overflow-y: auto;
 }
 
 .grid.three {
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 60px;
-	grid-row-gap: 60px;
-	padding: 60px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 60px;
+  grid-row-gap: 60px;
+  padding: 60px;
 }
 
 .grid.four {
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	padding: 30px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  padding: 30px;
 }
 
 .grid.five {
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .grid.medium {
-	grid-template-columns: 1000px;
-	justify-content: center;
+  grid-template-columns: 1000px;
+  justify-content: center;
 }
 
 .grid.mediumspot {
-	grid-template-columns: 1000px;
-	justify-content: center;
-	margin: 0px 40px;
+  grid-template-columns: 1000px;
+  justify-content: center;
+  margin: 0px 40px;
 }
 
 .grid.large {
-	padding: 30px 50px;
+  padding: 30px 50px;
 }
 
 .grid.middle {
-	align-content: center;
+  align-content: center;
 }
 
 .grid.tall {
-	height: 100vh;
+  height: 100vh;
 }
 
 .grid.image {
-	background-image: url('https://images.pexels.com/photos/1779746/pexels-photo-1779746.jpeg');
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	height: 100vh;
-	background-attachment: fixed;
-	overflow-y: scroll;
+  background-image: url("https://images.pexels.com/photos/1779746/pexels-photo-1779746.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-attachment: fixed;
+  overflow-y: scroll;
 }
 
 .grid.image2 {
-	background-image: url('https://images.pexels.com/photos/1779746/pexels-photo-1779746.jpeg');
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	height: 100vh;
-	opacity: 0.5;
+  background-image: url("https://images.pexels.com/photos/1779746/pexels-photo-1779746.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  opacity: 0.5;
 }
 
 .grid.spots {
-	height: 100vh;
-	align-items: start;
+  height: 100vh;
+  align-items: start;
 }
 
 .grid.full {
-	height: 100vh;
-	padding: 30px;
+  height: 100vh;
+  padding: 30px;
 }
 
 .details {
-	padding: 30px 30px 60px 30px;
-	margin-bottom: 30px;
+  padding: 30px 30px 60px 30px;
+  margin-bottom: 30px;
 }
 
 .details li {
-	list-style: none;
-	margin-bottom: 10px;
+  list-style: none;
+  margin-bottom: 10px;
 }
 
 .details li i {
-	margin-right: 10px;
+  margin-right: 10px;
 }
 /*
 .grid.image > .card {
