--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,8 +1,11 @@
-/* .sidebar {
-	height: 100vh;
-	width: 100%;
-	background-color: #effcef;
+.sidebar {
+  border: 1px solid gray;
+  padding: 20px;
+  background-color: gray;
+  margin: 5vh 2vw 0 -5vw; /* temporary margin adjustment */
 }
+
+/*
 
 .loggedIn,
 .guest {
