--- a/src/styles/spots.css
+++ b/src/styles/spots.css
@@ -1,8 +1,9 @@
-/* .fixed {
-	height: calc(100vh - 71px);
-	overflow-y: scroll;
+.fixed {
+  height: calc(100vh - 71px);
+  overflow: hidden;
 }
 
+/*
 .sidebar-left {
 	grid-template-columns: 200px auto;
 	grid-column-gap: 0px;
