--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -45,17 +45,17 @@
   grid-template-columns: 3fr 2fr;
 }
 
-.grid.scroll {
+/* .grid.scroll {
   overflow-y: auto;
   height: calc(100vh - 142px); /* subtract nav & filter */
-}
+/* } */
 
 .grid.twocards {
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-  padding: 30px;
-  overflow-y: auto;
+  grid-column-gap: 12px;
+  grid-row-gap: 15px;
+  margin: 30px 38px 0px -30px;
+  overflow: hidden;
 }
 
 .grid.three {
