created carousel gallery that only sort of works

--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -11,8 +11,8 @@
   padding-left: 10px;
 }
 
-.typefont {
-  font-family: "EB Garamond", serif;
+.type-font {
+  font-family: "Jost", serif;
   font-size: 20px;
   padding-top: 10px 10px 0px 10px;
 }
