--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,15 +1,17 @@
 .gallery {
   border-bottom: 1px solid #e2e2e2;
   margin-bottom: 10vh;
-  padding: 10px;
+  padding: 20px;
+  background-color: #fff;
 }
 
 .image-selected {
-  height: 500px;
+  /* height: 100vh; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  border-radius: 20px;
 }
 
 .gallery .image-main button {
@@ -37,8 +39,8 @@
   background-color: rgba(255, 255, 255);
 }
 
-.thumbnail-img {
-  height: 100px;
+.gallery-img {
+  height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
