--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -1,7 +1,13 @@
+body {
+  background-color: #9aa07e;
+}
+
 .spot-title {
-  font-family: "EB Garamond", serif;
-  font-size: 50px;
-  letter-spacing: "3px";
+  font-family: "Nunito", serif;
+  color: #fff;
+  font-size: 100px;
+  letter-spacing: "15px";
+  line-height: 130px;
 }
 
 .locationfont {
