--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -31,13 +31,13 @@
   border: none;
 }
 
-.gallery .thumbnail-row {
+.gallery .thumbnails {
   padding: 2vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1vw;
-  /* grid-row-gap: 30px; */
-  /* background-color: rgba(255, 255, 255); */
+  grid-row-gap: 30px;
+  background-color: inherit;
 }
 /*
 .gallery .thumbnails {
