--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -8,14 +8,17 @@
 } */
 
 .login-image {
-  /* background-image: url('https://images.pexels.com/photos/1055408/pexels-photo-1055408.jpeg'); */
   /* background-image: url('https://images.pexels.com/photos/3737691/pexels-photo-3737691.jpeg'); */
   /* background-image: url('https://images.pexels.com/photos/788485/pexels-photo-788485.jpeg'); */
   background-image: url("https://images.pexels.com/photos/1934796/pexels-photo-1934796.jpeg");
   background-size: cover;
-  background-position: center;
+  /* background-position: center; */
 }
-
+.login-font {
+  color: black;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
 /* text on login-image */
 /* div.login-image > h2 {
   font-size: 50px;
@@ -82,6 +85,7 @@ h3 {
   color: black;
   border: none;
 }
+
 .input-icon {
   padding: 1.3rem 0.5em 1.3rem 1.3rem;
   background-color: white;
@@ -102,10 +106,10 @@ h3 {
 
 .password-icon {
   position: absolute;
-  top: 95vh;
-  right: 65vw;
+  top: 55vh;
+  right: 48vw;
   cursor: pointer;
-  color: #fff;
+  color: gray;
 }
 
 /* //////SIGNUP CUSTOM STYLES START HERE */
