login and signup working

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,12 +1,5 @@
 /*LOGIN AND SIGNUP styles are both on this stylesheet scroll to lower half for SIGNUP */
 
-/* .loginRodal {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.35);
-}
-
-.signupRodal {
-} */
-
 .login-image {
   /* background-image: url('https://images.pexels.com/photos/3737691/pexels-photo-3737691.jpeg'); */
   /* background-image: url('https://images.pexels.com/photos/788485/pexels-photo-788485.jpeg'); */
@@ -14,6 +7,19 @@
   background-size: cover;
   /* background-position: center; */
 }
+.signup-label {
+  color: white !important;
+  letter-spacing: 2px !important;
+}
+.signup-form-control {
+  padding: 1.8rem;
+}
+
+/* #formGridSurname {
+ border: 3px dotted red; */
+/* test
+} */
+
 .login-font {
   color: black;
   font-size: 20px;
@@ -103,7 +109,9 @@ h3 {
   letter-spacing: 3px;
   text-transform: uppercase;
 }
-
+# SignupForm .form-label {
+  color: white;
+}
 .password-icon {
   position: absolute;
   top: 45vh;
@@ -116,9 +124,11 @@ h3 {
 .signup-image {
   background-image: url("https://images.pexels.com/photos/1934796/pexels-photo-1934796.jpeg");
   background-size: cover;
-  /* background-position: center; */
-  height: 84vh;
-  margin: -15px;
+  opacity: 0.9;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 150vh;
 }
 
 .signup-grid {
